Add header information

--- a/graph_lab.ipynb
+++ b/graph_lab.ipynb
@@ -15,10 +15,10 @@
    "source": [
     "## Header information:\n",
     "\n",
-    "  - Author #1: Firstname Lastname (email@mcmaster.ca)\n",
-    "  - Author #2: Firstname Lastname (email@mcmaster.ca)\n",
-    "  - Gitlab URL: http://gitlab.cas.mcmaster.ca/...\n",
-    "  - Avenue to Learn group name: "
+    "  - Author #1: Luigi Quattrociocchi (quattrl@mcmaster.ca)\n",
+    "  - Author #2: Dennis Fong (fongd1@mcmaster.ca)\n",
+    "  - Gitlab URL: http://gitlab.cas.mcmaster.ca/quattrl/l1-graph-lab\n",
+    "  - Avenue to Learn group name: Graph 42"
    ]
   },
   {
