--- a/graph_lab.ipynb
+++ b/graph_lab.ipynb
@@ -23,11 +23,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "d930eca9-bac7-44ed-b626-037b948c8a9b",
+   "execution_count": 1,
+   "id": "16666f03-45e8-4f68-b9d4-7ad8af53b96e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# import matplotlib.pyplot as plt\n",
+    "# from matplotlib.ticker import MaxNLocator\n",
+    "from csv_reader import *\n",
+    "from graph_builder import build_graph_from_csvs\n",
+    "from metric_extractor import *"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d930eca9-bac7-44ed-b626-037b948c8a9b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "metrics.num_nodes() = 304\n",
+      "metrics.num_edges() = 406\n",
+      "avg_degree = 2.6710526315789473\n"
+     ]
+    }
+   ],
+   "source": [
+    "G = build_graph_from_csvs(\"_dataset/london\")\n",
+    "metrics = GraphMetrics(G)\n",
+    "print(f\"{metrics.num_nodes() = }\")\n",
+    "print(f\"{metrics.num_edges() = }\")\n",
+    "degrees = [metrics.degree(x) for x in range(len(G.adj))]\n",
+    "avg_degree = sum(degrees) / len(degrees)\n",
+    "print(f\"{avg_degree = }\")\n",
+    "\n",
+    "# N = max(degrees) + 1\n",
+    "# fig, ax = plt.subplots(1, 1)\n",
+    "# N, bins, patches = ax.hist(degrees, bins=N, range=(0, N))\n",
+    "# ax.yaxis.set_major_locator(MaxNLocator(integer=True))\n",
+    "# _ = plt.xlabel(\"Degree\")\n",
+    "# _ = plt.ylabel(\"Number of Nodes\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "f6ab3952-e52a-4a02-aa41-00f109053983",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.2537250518798828 0.614661693572998\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# TODO: don't use these functions!\n",
+    "# Make a class to store all information from csvs,\n",
+    "# and create mapping from id to name, and vice versa\n",
+    "def get_name_of_id(name):\n",
+    "    stations = read_csv_contents(f\"_dataset/london.stations.csv\")\n",
+    "    for station in stations:\n",
+    "        if name == station.name: return station.id\n",
+    "    return -1\n",
+    "def get_id_of_name(u):\n",
+    "    stations = read_csv_contents(f\"_dataset/london.stations.csv\")\n",
+    "    for station in stations:\n",
+    "        if u == station.id: return station.name\n",
+    "    return \"\"\n",
+    "\n",
+    "n1 = \"Hanwell\"\n",
+    "n2 = \"Stratford\"\n",
+    "u = get_name_of_id(n1)\n",
+    "v = get_name_of_id(n2)\n",
+    "\n",
+    "# TODO: make an actual benchmark, not this very sad piece of code\n",
+    "import time\n",
+    "a, b = 0, 0\n",
+    "for _ in range(1000):\n",
+    "    t0 = time.time()\n",
+    "    it = Itinerary(u, v)\n",
+    "    it.set_search_strategy(metrics.dijkstras)\n",
+    "    p1 = it.shortest_path(1, 1, 1)\n",
+    "    t1 = time.time()\n",
+    "    a += t1 - t0\n",
+    "    t0 = time.time()\n",
+    "    it = Itinerary(u, v)\n",
+    "    it.set_search_strategy(metrics.astar)\n",
+    "    p2 = it.shortest_path(1, 1, 1)\n",
+    "    t1 = time.time()\n",
+    "    b += t1 - t0\n",
+    "    assert p1 == p2\n",
+    "print(a, b)"
+   ]
   }
  ],
  "metadata": {
@@ -46,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
