Week 1: Justification of design choices

--- a/graph_lab.ipynb
+++ b/graph_lab.ipynb
@@ -340,14 +340,23 @@
     "tags": []
    },
    "source": [
-    "### Class Diagram\n",
+    "### Benchmark results analysis\n",
+    "It's clear to see that the A* algorithm has lower average execution times and lower KPIs in every category for every test case (see `benchmark.py` for test cases). This correlation makes sense: if a searching algorithm inspects fewer nodes, edges, and performs less relaxations, then does less work and will finish faster.\n",
+    "An important note to make here is the heuristic function used by the particular version of A* benchmarked. The heuristic function used is the Great-circle distance between the latitude and longitude points of the current station and the target station. This is a (mostly) accurate way to measure the distance between two points given their positions on the earth, and for points this close together we could even have used the euclidian distance between the points (essentially projecting the points onto a plane). For the london tubemap data, [neither of these particular heuristics are necessarily admissible](https://en.wikipedia.org/wiki/Admissible_heuristic), and we can see that A* does not always return the \"shortest\" path by weight. This contributes to the margin of victory of A* over Dijkstra.\n",
+    "\n",
+    "### Class diagram\n",
     "TODO\n",
     "\n",
     "### Justification of design choices\n",
-    "TODO\n",
+    "A couple important design decisions were made this week. Most notably: the separation of \"builders\" and \"graphs\", the structure and usage of \"graph metrics\", and the tubemap itinerary.  \n",
+    "The notion of a `GraphBuilder` (an abstract base class) was introduced to generalize the production/building of some kind of graph. It is important that this functionality is distinct from the graph class itself to reduce the coupling between the format of the input and the graph, while maintaining cohesion.  \n",
+    "The `GraphBuilder` has an abstract method called `build`, which takes some (arbitrary) arguments and returns a graph, created from those arguments. In our case, a concrete implemenation of `GraphBuilder` called `TubemapCSVBuilder` takes three filenames of .csv files of stations, connections, and lines, and returns a bidirectional graph (`BiGraph`) class from the contents of those files. If a new kind of representation of a graph comes in some other form (different file format, input stream, existing graph, etc), a new subclass of `GraphBuilder` can be created. This is similar to the factory design pattern, however having a dedicated builder class is more useful because additional information (perhaps a byproduct of the input used to build the graph) can be stored inside the class, separate from the graph.  \n",
+    "The graph metrics, like the graph builders, are entirely distinct from the graph class itself. This way, the SRP (single responsibility principle) is satisfied. Our library has an abstract base class `GraphMetric` which has an abstract `__call__` method. Each \"metric\" (any information that a user may want to extract from their graph) is implemented as a subclass of `GraphMetric`. To extract a metric, a user should instantiate the subclass of the desired metric and \"call\" that object. The design of this mechanism is intentional and important for satifying the Open/Closed principle; When a library writer want to add a new metric (extending functionality) without modifying (and potentially breaking) existing code, they should create a new subclass of `GraphMetric`.\n",
+    "The `TubemapItinerary` class is yet another practical application of a design pattern in our library. The class uses the strategy pattern to compute an optimal path between two stations. The itinerary class is constructed with the IDs of the starting and target nodes, and has a method `set_search_strategy` which takes a callable object (more specifically, a `PathMetric`, which is an abstract subclass of `GraphMetric`). The `PathMetric` dependency is injected into the itinerary class when it is set, and is called upon later when the itinerary's `shortest_path` method is called. The itinerary class was written in this way for SRP purposes: `TubemapItinerary` does not care about the graph or search strategy implementations, only that it can call back to something when it needs to compute the shortest path. `PathMetric` subclasses must (and do) satisfy the Liskov substitution principle for this to work. `TubemapItinerary` can call any `PathMetric` which implements the abstract `__call__` operator with the correct arguments.\n",
     "\n",
-    "### Work distribution\n",
-    "TODO\n"
+    "\n",
+    "### How we split the work and who did what?\n",
+    "The design and implementation of the library was done by both partners together in person during the first week. We agreed that it is beneficial to work together on one computer in the early stages, so that our rapid prototyping isn't slowed down by version control. On the weekend after the first week, we split up the final tasks; Dennis drew the class diagram and Luigi wrote the benchmark, then we checked each others work."
    ]
   },
   {
