Week 2 patrol problem

--- a/graph_lab.ipynb
+++ b/graph_lab.ipynb
@@ -116,94 +116,94 @@
      "output_type": "stream",
      "text": [
       "Case \"Dijkstra-1-1-1-Picadilly_Circus-St._Paul's\":\n",
-      "KPI 1: Edges evaluated  = 172\n",
-      "KPI 2: Nodes evaluated  = 41\n",
-      "KPI 3: Edge relaxations = 60\n",
+      "KPI 1: Edges evaluated  = 168\n",
+      "KPI 2: Nodes evaluated  = 40\n",
+      "KPI 3: Edge relaxations = 59\n",
       "============================================================\n",
       "Case \"A*-1-1-1-Picadilly_Circus-St._Paul's\":\n",
       "KPI 1: Edges evaluated  = 53\n",
       "KPI 2: Nodes evaluated  = 12\n",
-      "KPI 3: Edge relaxations = 25\n",
+      "KPI 3: Edge relaxations = 24\n",
       "============================================================\n",
       "Case \"Dijkstra-1-0-0-Picadilly_Circus-St._Paul's\":\n",
-      "KPI 1: Edges evaluated  = 149\n",
-      "KPI 2: Nodes evaluated  = 37\n",
-      "KPI 3: Edge relaxations = 56\n",
+      "KPI 1: Edges evaluated  = 145\n",
+      "KPI 2: Nodes evaluated  = 36\n",
+      "KPI 3: Edge relaxations = 55\n",
       "============================================================\n",
       "Case \"A*-1-0-0-Picadilly_Circus-St._Paul's\":\n",
       "KPI 1: Edges evaluated  = 57\n",
       "KPI 2: Nodes evaluated  = 13\n",
-      "KPI 3: Edge relaxations = 23\n",
+      "KPI 3: Edge relaxations = 22\n",
       "============================================================\n",
       "Case \"Dijkstra-1-1-100-Picadilly_Circus-St._Paul's\":\n",
-      "KPI 1: Edges evaluated  = 298\n",
-      "KPI 2: Nodes evaluated  = 92\n",
-      "KPI 3: Edge relaxations = 135\n",
+      "KPI 1: Edges evaluated  = 294\n",
+      "KPI 2: Nodes evaluated  = 91\n",
+      "KPI 3: Edge relaxations = 134\n",
       "============================================================\n",
       "Case \"A*-1-1-100-Picadilly_Circus-St._Paul's\":\n",
       "KPI 1: Edges evaluated  = 31\n",
       "KPI 2: Nodes evaluated  = 7\n",
-      "KPI 3: Edge relaxations = 19\n",
+      "KPI 3: Edge relaxations = 18\n",
       "============================================================\n",
       "Case \"Dijkstra-1-1-1-Hammersmith-Stratford\":\n",
-      "KPI 1: Edges evaluated  = 685\n",
-      "KPI 2: Nodes evaluated  = 220\n",
-      "KPI 3: Edge relaxations = 235\n",
+      "KPI 1: Edges evaluated  = 680\n",
+      "KPI 2: Nodes evaluated  = 219\n",
+      "KPI 3: Edge relaxations = 234\n",
       "============================================================\n",
       "Case \"A*-1-1-1-Hammersmith-Stratford\":\n",
       "KPI 1: Edges evaluated  = 79\n",
       "KPI 2: Nodes evaluated  = 20\n",
-      "KPI 3: Edge relaxations = 48\n",
+      "KPI 3: Edge relaxations = 47\n",
       "============================================================\n",
       "Case \"Dijkstra-1-0-0-Hammersmith-Stratford\":\n",
-      "KPI 1: Edges evaluated  = 625\n",
-      "KPI 2: Nodes evaluated  = 207\n",
-      "KPI 3: Edge relaxations = 222\n",
+      "KPI 1: Edges evaluated  = 620\n",
+      "KPI 2: Nodes evaluated  = 206\n",
+      "KPI 3: Edge relaxations = 221\n",
       "============================================================\n",
       "Case \"A*-1-0-0-Hammersmith-Stratford\":\n",
       "KPI 1: Edges evaluated  = 79\n",
       "KPI 2: Nodes evaluated  = 20\n",
-      "KPI 3: Edge relaxations = 47\n",
+      "KPI 3: Edge relaxations = 46\n",
       "============================================================\n",
       "Case \"Dijkstra-1-1-100-Hammersmith-Stratford\":\n",
-      "KPI 1: Edges evaluated  = 797\n",
-      "KPI 2: Nodes evaluated  = 235\n",
-      "KPI 3: Edge relaxations = 266\n",
+      "KPI 1: Edges evaluated  = 792\n",
+      "KPI 2: Nodes evaluated  = 234\n",
+      "KPI 3: Edge relaxations = 265\n",
       "============================================================\n",
       "Case \"A*-1-1-100-Hammersmith-Stratford\":\n",
       "KPI 1: Edges evaluated  = 102\n",
       "KPI 2: Nodes evaluated  = 22\n",
-      "KPI 3: Edge relaxations = 52\n",
+      "KPI 3: Edge relaxations = 51\n",
       "============================================================\n",
       "Case \"Dijkstra-1-1-1-Ealing_Broadway-Upminster\":\n",
-      "KPI 1: Edges evaluated  = 889\n",
-      "KPI 2: Nodes evaluated  = 318\n",
-      "KPI 3: Edge relaxations = 317\n",
+      "KPI 1: Edges evaluated  = 887\n",
+      "KPI 2: Nodes evaluated  = 317\n",
+      "KPI 3: Edge relaxations = 316\n",
       "============================================================\n",
       "Case \"A*-1-1-1-Ealing_Broadway-Upminster\":\n",
       "KPI 1: Edges evaluated  = 157\n",
       "KPI 2: Nodes evaluated  = 45\n",
-      "KPI 3: Edge relaxations = 72\n",
+      "KPI 3: Edge relaxations = 71\n",
       "============================================================\n",
       "Case \"Dijkstra-1-0-0-Ealing_Broadway-Upminster\":\n",
-      "KPI 1: Edges evaluated  = 833\n",
-      "KPI 2: Nodes evaluated  = 307\n",
-      "KPI 3: Edge relaxations = 306\n",
+      "KPI 1: Edges evaluated  = 831\n",
+      "KPI 2: Nodes evaluated  = 306\n",
+      "KPI 3: Edge relaxations = 305\n",
       "============================================================\n",
       "Case \"A*-1-0-0-Ealing_Broadway-Upminster\":\n",
       "KPI 1: Edges evaluated  = 157\n",
       "KPI 2: Nodes evaluated  = 45\n",
-      "KPI 3: Edge relaxations = 72\n",
+      "KPI 3: Edge relaxations = 71\n",
       "============================================================\n",
       "Case \"Dijkstra-1-1-100-Ealing_Broadway-Upminster\":\n",
-      "KPI 1: Edges evaluated  = 724\n",
-      "KPI 2: Nodes evaluated  = 237\n",
-      "KPI 3: Edge relaxations = 271\n",
+      "KPI 1: Edges evaluated  = 722\n",
+      "KPI 2: Nodes evaluated  = 236\n",
+      "KPI 3: Edge relaxations = 270\n",
       "============================================================\n",
       "Case \"A*-1-1-100-Ealing_Broadway-Upminster\":\n",
       "KPI 1: Edges evaluated  = 127\n",
       "KPI 2: Nodes evaluated  = 46\n",
-      "KPI 3: Edge relaxations = 71\n",
+      "KPI 3: Edge relaxations = 70\n",
       "============================================================\n"
      ]
     },
@@ -367,6 +367,46 @@
    "metadata": {},
    "source": [
     "## Week 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "54ba7c43-c05d-4f22-98bb-df7d495e9242",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: total: 15.6 ms\n",
+      "Wall time: 14 ms\n",
+      "269\n",
+      "[23, 41, 42, 183, 43, 219, 63, 203, 217, 20, 65, 97, 19]\n",
+      "[19, 97, 65, 20, 217, 203, 63, 219, 43, 289, 200, 270, 78, 15, 269, 21, 67, 66, 85, 129, 268, 267]\n",
+      "[267, 268, 129, 85, 66, 67, 21, 269, 15, 78, 270, 200, 289, 36, 33, 164, 24, 156, 167, 188, 7, 145, 89, 40, 47, 22, 111, 100, 34, 119, 58]\n",
+      "[58, 119, 34, 100, 111, 22, 47, 40, 89, 277, 192, 28, 11, 94, 282, 202, 178, 115, 184, 199, 180, 179, 168, 62]\n",
+      "[62, 168, 179, 180]\n",
+      "[180, 199, 184, 115, 291]\n",
+      "[291, 115, 178, 202, 282, 94, 11, 28, 107, 285]\n",
+      "[285, 279, 233, 157, 23]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Travelling salesman problem\n",
+    "from graphlib.builders import TubemapCSVBuilder\n",
+    "from graphlib.metrics import TubemapPatrolMetric\n",
+    "tubemap_builder = TubemapCSVBuilder()\n",
+    "tubemap_graph = tubemap_builder.build(\"_dataset/london.stations.csv\", \"_dataset/london.connections.csv\", \"_dataset/london.lines.csv\")\n",
+    "\n",
+    "import random\n",
+    "stations = random.sample(list(tubemap_graph.adj.keys()), 8)\n",
+    "patrol_metric = TubemapPatrolMetric(tubemap_graph, stations)\n",
+    "%time dist, paths = patrol_metric()\n",
+    "print(dist)\n",
+    "for path in paths:\n",
+    "    print(path)"
    ]
   },
   {
