--- a/graph_lab.ipynb
+++ b/graph_lab.ipynb
@@ -410,6 +410,188 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "a5a5930e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 [1, 52, 73, 182, 194, 234]\n",
+      "2 [2, 156, 167, 188, 263]\n",
+      "3 [3]\n",
+      "4 [4, 70, 201, 284, 292]\n",
+      "5 [5, 252]\n",
+      "7 [7, 145, 223]\n",
+      "8 [8]\n",
+      "9 [9, 232]\n",
+      "10 [10, 95, 123, 128]\n",
+      "11 [11, 163, 212, 83, 193, 104, 28, 162, 192, 197, 259, 277, 107, 285, 133, 146, 236, 273]\n",
+      "12 [12, 257, 258]\n",
+      "13 [13, 250, 157, 233, 279]\n",
+      "14 [14, 92]\n",
+      "15 [15, 269]\n",
+      "16 [16, 91, 109]\n",
+      "17 [17, 110, 209, 242, 293]\n",
+      "18 [18]\n",
+      "19 [19, 97]\n",
+      "20 [20, 65, 217]\n",
+      "21 [21, 67]\n",
+      "22 [22, 47]\n",
+      "24 [24, 164, 244, 295]\n",
+      "25 [25, 161, 255]\n",
+      "26 [26, 260, 274]\n",
+      "27 [27]\n",
+      "29 [29]\n",
+      "30 [30, 190]\n",
+      "31 [31]\n",
+      "32 [32]\n",
+      "33 [33]\n",
+      "34 [34, 100]\n",
+      "36 [36]\n",
+      "38 [38, 58]\n",
+      "39 [39]\n",
+      "40 [40, 139, 264, 170]\n",
+      "42 [42, 120, 238]\n",
+      "44 [44, 166]\n",
+      "45 [45, 243]\n",
+      "48 [48, 126]\n",
+      "49 [49, 87, 151]\n",
+      "51 [51, 103, 215]\n",
+      "54 [54, 55, 245]\n",
+      "56 [56]\n",
+      "59 [59]\n",
+      "60 [60]\n",
+      "61 [61, 171]\n",
+      "63 [63, 203, 219]\n",
+      "66 [66]\n",
+      "71 [71, 172]\n",
+      "72 [72, 286]\n",
+      "74 [74]\n",
+      "75 [75, 210, 291, 235]\n",
+      "76 [76, 296]\n",
+      "77 [77, 124]\n",
+      "78 [78]\n",
+      "79 [79]\n",
+      "80 [80]\n",
+      "81 [81]\n",
+      "82 [82]\n",
+      "84 [84]\n",
+      "85 [85, 129, 268]\n",
+      "89 [89]\n",
+      "90 [90]\n",
+      "93 [93, 165, 288, 302]\n",
+      "94 [94, 254, 290]\n",
+      "96 [96, 195, 205, 287]\n",
+      "98 [98, 173, 211, 275]\n",
+      "99 [99, 122]\n",
+      "101 [101, 227]\n",
+      "102 [102]\n",
+      "105 [105, 196]\n",
+      "108 [108]\n",
+      "111 [111]\n",
+      "112 [112]\n",
+      "113 [113, 246, 298]\n",
+      "114 [114]\n",
+      "115 [115, 184, 199]\n",
+      "116 [116]\n",
+      "117 [117, 118]\n",
+      "119 [119]\n",
+      "125 [125, 134, 220, 222, 271]\n",
+      "127 [127, 226]\n",
+      "130 [130, 131]\n",
+      "132 [132]\n",
+      "135 [135]\n",
+      "136 [136, 191]\n",
+      "137 [137, 206]\n",
+      "138 [138]\n",
+      "140 [140, 237]\n",
+      "141 [141]\n",
+      "142 [142]\n",
+      "143 [143, 159, 278]\n",
+      "144 [144, 207, 282]\n",
+      "147 [147, 150, 283]\n",
+      "148 [148]\n",
+      "149 [149, 208]\n",
+      "153 [153, 247, 289]\n",
+      "154 [154]\n",
+      "155 [155, 225, 276]\n",
+      "160 [160]\n",
+      "168 [168]\n",
+      "169 [169]\n",
+      "176 [176]\n",
+      "177 [177, 239]\n",
+      "178 [178, 202]\n",
+      "179 [179, 180]\n",
+      "181 [181]\n",
+      "185 [185, 281]\n",
+      "186 [186]\n",
+      "198 [198]\n",
+      "200 [200, 270]\n",
+      "213 [213]\n",
+      "216 [216]\n",
+      "218 [218]\n",
+      "224 [224]\n",
+      "228 [228]\n",
+      "229 [229]\n",
+      "230 [230, 241, 301]\n",
+      "231 [231, 300]\n",
+      "240 [240]\n",
+      "248 [248]\n",
+      "249 [249]\n",
+      "251 [251]\n",
+      "253 [253]\n",
+      "262 [262]\n",
+      "265 [265]\n",
+      "266 [266, 303]\n",
+      "267 [267]\n",
+      "272 [272]\n",
+      "294 [294]\n",
+      "297 [297]\n",
+      "299 [299]\n",
+      "35 [35]\n",
+      "6 [6]\n",
+      "23 [23, 41]\n",
+      "50 [50]\n",
+      "46 [46]\n",
+      "53 [53]\n",
+      "214 [214]\n",
+      "62 [62]\n",
+      "280 [280]\n",
+      "221 [221]\n",
+      "121 [121]\n",
+      "261 [261]\n",
+      "57 [57, 187]\n",
+      "88 [88, 256]\n",
+      "68 [68, 158]\n",
+      "37 [37]\n",
+      "204 [204]\n",
+      "43 [43]\n",
+      "183 [183]\n",
+      "64 [64, 106]\n",
+      "69 [69, 86, 152]\n",
+      "174 [174]\n",
+      "175 [175]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from graphlib.builders import TubemapCSVBuilder\n",
+    "tubemap_builder = TubemapCSVBuilder()\n",
+    "tubemap_graph = tubemap_builder.build(\"_dataset/london.stations.csv\", \"_dataset/london.connections.csv\", \"_dataset/london.lines.csv\")\n",
+    "from graphlib.metrics.tubemap_islands import TubemapIslandMetric\n",
+    "\n",
+    "M = TubemapIslandMetric(tubemap_graph)\n",
+    "\n",
+    "# TODO: Format and print data nicely somehow\n",
+    "d = M()\n",
+    "for k, v in d.items():\n",
+    "    print(k, v)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "ac30558d-fde9-4533-a870-afb3295b5d73",
    "metadata": {},
@@ -434,7 +616,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
