Modify builder class
Don't violate liskov

--- a/graph_lab.ipynb
+++ b/graph_lab.ipynb
@@ -43,8 +43,8 @@
     "# Build a graph from the csv files\n",
     "from graphlib.builders import TubemapCSVBuilder\n",
     "\n",
-    "tubemap_builder = TubemapCSVBuilder()\n",
-    "tubemap_graph = tubemap_builder.build(\"_dataset/london.stations.csv\", \"_dataset/london.connections.csv\", \"_dataset/london.lines.csv\")"
+    "tubemap_builder = TubemapCSVBuilder(\"_dataset/london.stations.csv\", \"_dataset/london.connections.csv\", \"_dataset/london.lines.csv\")\n",
+    "tubemap_graph = tubemap_builder.build()"
    ]
   },
   {
@@ -485,8 +485,8 @@
    "source": [
     "# Subway Patrol Planning\n",
     "from graphlib.builders import TubemapCSVBuilder\n",
-    "tubemap_builder = TubemapCSVBuilder()\n",
-    "tubemap_graph = tubemap_builder.build(\"_dataset/london.stations.csv\", \"_dataset/london.connections.csv\", \"_dataset/london.lines.csv\")\n",
+    "tubemap_builder = TubemapCSVBuilder(\"_dataset/london.stations.csv\", \"_dataset/london.connections.csv\", \"_dataset/london.lines.csv\")\n",
+    "tubemap_graph = tubemap_builder.build()\n",
     "from graphlib.metrics import TubemapPatrolMetric\n",
     "\n",
     "import random\n",
@@ -724,8 +724,8 @@
    "source": [
     "# Tubemap transporation islands\n",
     "from graphlib.builders import TubemapCSVBuilder\n",
-    "tubemap_builder = TubemapCSVBuilder()\n",
-    "tubemap_graph = tubemap_builder.build(\"_dataset/london.stations.csv\", \"_dataset/london.connections.csv\", \"_dataset/london.lines.csv\")\n",
+    "tubemap_builder = TubemapCSVBuilder(\"_dataset/london.stations.csv\", \"_dataset/london.connections.csv\", \"_dataset/london.lines.csv\")\n",
+    "tubemap_graph = tubemap_builder.build()\n",
     "from graphlib.metrics.tubemap_islands import TubemapIslandMetric\n",
     "\n",
     "components, rep_nodes, zone_edges = TubemapIslandMetric(tubemap_graph)()\n",
@@ -763,12 +763,12 @@
    "id": "b43a92aa-d890-4ba9-bce8-c130dffadc78",
    "metadata": {},
    "source": [
-    "### Benchmark results analysis\n",
+    "### Analysis of algorithms\n",
     "\n",
-    "### Class diagram\n",
+    "### Updated class diagram\n",
     "![UML Diagram](./uml/graphlib2.svg)  \n",
     "\n",
-    "### Justification of design choices\n",
+    "### Justification of design changes\n",
     "\n"
    ]
   },
