Fix notebook for exporting to pdf
Many latex packages later...

--- a/graph_lab.ipynb
+++ b/graph_lab.ipynb
@@ -346,7 +346,8 @@
     "An important note to make here is the heuristic function used by the particular version of A* benchmarked. The heuristic function used is the Great-circle distance between the latitude and longitude points of the current station and the target station. This is a (mostly) accurate way to measure the distance between two points given their positions on the earth, and for points this close together we could even have used the euclidian distance between the points (essentially projecting the points onto a plane). For the london tubemap data, [neither of these particular heuristics are necessarily admissible](https://en.wikipedia.org/wiki/Admissible_heuristic), and we can see that A* does not always return the \"shortest\" path by weight. This contributes to the margin of victory of A* over Dijkstra.\n",
     "\n",
     "### Class diagram\n",
-    "![UML Diagram](./uml/graphlib1.svg)  \n",
+    "![UML Diagram](uml/graphlib1.png)\n",
+    "\n",
     "Notes: \n",
     "- *args and **kwargs are ways to pass a variable number of arguments into a function in python\n",
     "\n",
@@ -821,6 +822,8 @@
    "source": [
     "### Analysis of algorithms\n",
     "#### Subway Patrol Planning\n",
+    "\n",
+    "\n",
     "The Subway Patrol Planning problem is a variation of the travelling salesman problem (TSP), which essentially boils down to solving for the minimum weight Hamiltonian cycle in a connected graph. This is a well known NP-hard problem in computer science. It can be solved non-optimally by heuristic algorithms in polynomial time, but can only be solved optimally in exponential time. We opted for a traditional dynamic programming approach which takes time proportional to $O(2^n)$ (reasoning below) (as opposed to the brute force algorithm, which checks every permutation of nodes in $O(n!)$ time) where $n$ is the number of stations in the path.\n",
     "\n",
     "Our implementation of the TSP algorithm first computes a matrix of distances from every station to every other station. The details of this are not important, since the time required becomes insignificant compared to the rest of the algorithm, but we used our existing Dijktra's implementation for this. Next, we recursively compute the minimum cost to visit every station in some order, caching the result of every call to avoid recomputation. \n",
@@ -830,15 +833,17 @@
     "Empirically, we can show that our algorithm has a run time proportional to $2^n$ by running our algorithm on inputs with different sizes of $n$ and plotting the results (shown in the above cell). The first plot shows clear exponential growth, and the second semilog plot supports this as evident by the (nearly) straight line, with exception to the variance in runtimes of smaller times.\n",
     "\n",
     "#### Urbanism Planning\n",
-    "The Urbanism Planning problem involves finding the \"transportation islands\" (connected components that do not cross zone boundaries) of our tubemap graph. We boiled this problem down to finding all subgraphs (components) in a disconnected graph (forest), where the original graph is disconnected on every edge that crosses between zones. The algorithm we used to solve problem is based on depth-first search (DFS) and has an overall runtime complexity of $O(n)$, where $n$ is the number of stations in the tubemap. To determine the connected components, we run a recursive DFS starting from every station in the graph. Each recursive call to DFS checks if the adjacent station is in the same zone, and only continues to recurse if the both the current station and the adjacent stations are in the same zone, effectively disconnecting the graph across zone boundaries. This allows us to identify the all the components within the same zone in a single search, (which creates a single transportation island). After performing every call to DFS, we reconnect the components (or \"supernodes\") by re-adding edges which connect stations in different zones. The reason why this algorithm has a runtime complexity of $O(n)$ is because our DFS doesn't revisit any station, i.e. every station is visited exactly **once**.\n",
+    "\n",
+    "\n",
+    "The Urbanism Planning problem involves finding the \"transportation islands\" (connected components that do not cross zone boundaries) of our tubemap graph. We boiled this problem down to finding all subgraphs (components) in a disconnected graph (forest), where the original graph is disconnected on every edge that crosses between zones. The algorithm we used to solve problem is based on depth-first search (DFS) and has an overall runtime complexity of $O(n)$, where $n$ is the number of stations in the tubemap. To determine the connected components, we run a recursive DFS starting from every station in the graph. Each recursive call to DFS checks if the adjacent station is in the same zone, and only continues to recurse if the both the current station and the adjacent stations are in the same zone, effectively disconnecting the graph across zone boundaries. This allows us to identify the all the components within the same zone in a single search, (which creates a single transportation island). After performing every call to DFS, we reconnect the components (or \"supernodes\") by re-adding edges which connect stations in different zones. The reason why this algorithm has a runtime complexity of $O(n)$ is because our DFS doesn't revisit any station, i.e. every station is visited exactly once.\n",
     "\n",
     "### Updated class diagram\n",
-    "![UML Diagram](./uml/graphlib2.svg)  \n",
+    "![UML Diagram](uml/graphlib2.png)\n",
     "\n",
     "### Justification of design changes\n",
     "During week 1, we intended to keep the SOLID principles in mind, and designed the library to adhere to these principles. However, initially our design did not follow the Liskov's Substitution princple in one particular class, namely the `TubemapCSVBuilder` class. During week two, we modified the `TubemapCSVBuilder` class to follow the Liskov's Substitution principle by moving the parameters of the `build` method into the `__init__` method. This way the `build` method is identical for all concrete subclasses of the `BiGraphBuilder` class.\n",
     "  \n",
-    "Aside from this, no major design changes were necessary because we had the foresight to design our library in a modular way from the beginning. For instance, we already satisfied the open-closed (O in SOLID) principle; we were able to **extend** our design and implement new metrics (`TubemapPatrolMetric` and `TubemapIslandMetric`) without **modifying** existing classes. This was possible because of our `GraphMetric` abstract class which each new graph metric must inherit. In a related vein, the single-responsibility (S in SOLID) and dependency inversion (D in SOLID) principles are also satisfied by this design. Each concrete metric class has the single responsibility of computing its own metric, and users of our library can depend upon the `GraphMetric` class' interface rather than concrete metric implementation.  \n",
+    "Aside from this, no major design changes were necessary because we had the foresight to design our library in a modular way from the beginning. For instance, we already satisfied the open-closed (O in SOLID) principle; we were able to extend our design and implement new metrics (`TubemapPatrolMetric` and `TubemapIslandMetric`) without modifying existing classes. This was possible because of our `GraphMetric` abstract class which each new graph metric must inherit. In a related vein, the single-responsibility (S in SOLID) and dependency inversion (D in SOLID) principles are also satisfied by this design. Each concrete metric class has the single responsibility of computing its own metric, and users of our library can depend upon the `GraphMetric` class' interface rather than concrete metric implementation.  \n",
     "Incidentally, the `GraphMetric` class had already satisfied the interface segregation (I in SOLID) principle by only having one abstract method. This was because when creating the class we had the single-responsibility principle in mind, and so the single responsibility of each graph metric *is* the only abstract method.\n"
    ]
   }
@@ -859,7 +864,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.7"
   }
  },
  "nbformat": 4,
