Added Dennis' reflection

--- a/graph_lab.ipynb
+++ b/graph_lab.ipynb
@@ -846,6 +846,26 @@
     "Aside from this, no major design changes were necessary because we had the foresight to design our library in a modular way from the beginning. For instance, we already satisfied the open-closed (O in SOLID) principle; we were able to extend our design and implement new metrics (`TubemapPatrolMetric` and `TubemapIslandMetric`) without modifying existing classes. This was possible because of our `GraphMetric` abstract class which each new graph metric must inherit. In a related vein, the single-responsibility (S in SOLID) and dependency inversion (D in SOLID) principles are also satisfied by this design. Each concrete metric class has the single responsibility of computing its own metric, and users of our library can depend upon the `GraphMetric` class' interface rather than concrete metric implementation.  \n",
     "Incidentally, the `GraphMetric` class had already satisfied the interface segregation (I in SOLID) principle by only having one abstract method. This was because when creating the class we had the single-responsibility principle in mind, and so the single responsibility of each graph metric *is* the only abstract method.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dbd7be52-8b5e-4dad-8e09-a3e2aa68109e",
+   "metadata": {},
+   "source": [
+    "## Self Relfection (Dennis Fong)\n",
+    "\n",
+    "#### Backward\n",
+    "I have not done any hands on coding with graphs; the only exposure I had to it was learning about it within an algorithms course. However, I have never heard of the travelling salesman problem until now. I have only used design patterns and SOLID principles before\n",
+    "\n",
+    "#### Inward\n",
+    "I think this work is very interesting, and a good challenge that pushes students out of their comfort zone. I liked how we are able to apply the knowledge we learned (presumably) last year on a practical example, being the London Tube map, since when we learned it we only analyzed the algorithm, without actually implementing it. However, I did not like how we had to dive straight into an example like this since we didnt have any prior experience, coding the algorithm and making it work proved to be quite difficult.\n",
+    "\n",
+    "#### Outward\n",
+    "I want people to notice the inclusion of concepts previously taught throughout the classes we made. At first, I questioned if the concepts we learned last year were of any real relevance, such as the SOLID principles, but after implementing them, I am able to see the usage and I hope other people looking at this report see the same.\n",
+    "\n",
+    "#### Forward\n",
+    "If I had the chance to do the project again, I would have tried to communicate with the TA/Professor more. A lot of sections were not very clear, and I tried to brute force through the issue, only to learn in the future through the announcements that some things were wrong, causing me to have to work backwards. Other than that, I am happy with the workflow I have achieved with my partner on this project."
+   ]
   }
  ],
  "metadata": {
@@ -864,7 +884,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
