--- a/graph_lab.ipynb
+++ b/graph_lab.ipynb
@@ -855,7 +855,7 @@
     "## Self Relfection (Dennis Fong)\n",
     "\n",
     "#### Backward\n",
-    "I have not done any hands on coding with graphs; the only exposure I had to it was learning about it within an algorithms course. However, I have never heard of the travelling salesman problem until now. I have only used design patterns and SOLID principles before\n",
+    "I have not done any hands on coding with graphs; the only exposure I had to it was learning about it within an algorithms course. However, I have never heard of the travelling salesman problem until now. I have only used design patterns and SOLID principles before.\n",
     "\n",
     "#### Inward\n",
     "I think this work is very interesting, and a good challenge that pushes students out of their comfort zone. I liked how we are able to apply the knowledge we learned (presumably) last year on a practical example, being the London Tube map, since when we learned it we only analyzed the algorithm, without actually implementing it. However, I did not like how we had to dive straight into an example like this since we didnt have any prior experience, coding the algorithm and making it work proved to be quite difficult.\n",
@@ -865,6 +865,26 @@
     "\n",
     "#### Forward\n",
     "If I had the chance to do the project again, I would have tried to communicate with the TA/Professor more. A lot of sections were not very clear, and I tried to brute force through the issue, only to learn in the future through the announcements that some things were wrong, causing me to have to work backwards. Other than that, I am happy with the workflow I have achieved with my partner on this project."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4cd68c57-d7ed-4143-b95b-c549f6e48c29",
+   "metadata": {},
+   "source": [
+    "## Self Relfection (Luigi Quattrociocchi)\n",
+    "\n",
+    "#### Backward\n",
+    "Personally, I have a lot of experience with competitive programming starting from back in high school. Because of this, I am pretty familiar with graphs and pathfinding algorithms. On the other hand, I haven't worked on any projects large enough to warrant obsessing over design principles and organization.\n",
+    "\n",
+    "#### Inward\n",
+    "I feel proud of the work my partner and I produced within the past few weeks. In my opinion, we came up with a very modular and extensive library of graphing functionality. I particularly enjoyed implementing the algorithms because of my background in data structures and algorithms. It's something that I like to practice as a hobby in my free time, so it was no issue for me in this lab. I disliked the grunt work of creating UML diagrams and writing tests. I don't think that this opinion is uncommon among my peers, since these things are less exciting than implementations.\n",
+    "\n",
+    "#### Outward\n",
+    "One thing I'd like for people to notice about our work is the cleanliness of our git repository. In my opinion, being conscious of version control is a skill that every software engineer should have. My partner and I ensured that we pushed our changes as often as we made them in order to minimize conflicts and merges. Related to this, our folder structure/hierarchy is also clean and organized. Anyone can implement the algorithms, but enforcing organization helps ourselves and others to better understand the structure of our code.\n",
+    "\n",
+    "#### Forward\n",
+    "Given the chance to start over, I would have paid more attention to the amount of time each component of the lab should have taken. If the third week of the assignment was not cut, then our team would have struggled to finish in time. Although I can't control the amount of work I have to complete in a given week, I can manage my time better and not have to rush to complete milestones."
    ]
   }
  ],
@@ -884,7 +904,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
